# RosettaEvolution

./: .gitignore  CMakeLists.txt  README.md  distribute_files.py  flags  flags_10  flags_2  flags_5  options.ini
FilesUsedForFirstBenchmark/: flags
pyscripts/: benchmark_reader.py  count_files.py  create_evolution_plot.py  create_scoreFA_scripts.py  creator.py  distribute_pdbs.py  group_violins_paper.py  options_creator.py  purge_error_logs.py  slurm_view.py
src/: GPATH  GRTAGS  GTAGS  main.cpp  mpi_main.cpp  popul_builder_main.cpp  test_main.cpp
src/Algorithm/: DE_types.hpp  DifferentialEvolutionMover.cpp  DifferentialEvolutionMover.hpp
src/Controller/: AlgorithmBuilder.cpp  AlgorithmBuilder.hpp  DE_Operator.cpp  DE_Operator.hpp  FitnessFunctionInitializer.cpp  FitnessFunctionInitializer.hpp  FragmentInserterBuilder.cpp  FragmentInserterBuilder.hpp  OptionsMapInitializer.cpp  OptionsMapInitializer.hpp  PopulStrategyInitializer.cpp  PopulStrategyInitializer.hpp  ProteinInfoArchive.cpp  ProteinInfoArchive.hpp  StageBuilder.cpp  StageBuilder.hpp
src/Extra/: FileToPDBPrinter.cpp  FileToPDBPrinter.hpp  Utils.hpp
src/Movers/: CalculateRmsdDistancePopulation.cpp  CalculateRmsdDistancePopulation.hpp  FitFunction.hpp  FragInsertionMover.cpp  FragInsertionMover.hpp  InitPopulation.cpp  InitPopulation.hpp  LocalSearchIndividualMover.hpp  PoseFunction.cpp  PoseFunction.hpp  PrintBestIndividual.hpp  SecondStage.hpp
src/MpiFiles/: MasterRosettaCalculator.cpp  MasterRosettaCalculator.hpp  UtilsMPI.hpp  WorkerProcess.cpp  WorkerProcess.hpp
src/PoseFiles/: DEoperator.cpp  DEoperator.hpp  Utils.hpp  diff_output_deoperator  types.hpp
src/PoseFiles/moves/: CalculateRmsdDistancePopulation.cpp  CalculateRmsdDistancePopulation.hpp  DE_types.hpp  DifferentialEvolutionMover.cpp  DifferentialEvolutionMover.hpp  DistancesProfileCalculator.cpp  DistancesProfileCalculator.hpp  FitFunction.cpp  FitFunction.hpp  FragBias.hpp  FragInsertionMover.cpp  FragInsertionMover.hpp  InitPopulation.hpp  LocalSearchIndividualMover.hpp  OldFragApplierUsedInRikken.cpp  OldFragApplierUsedInRikken.hpp  PoseFunction.cpp  PoseFunction.hpp  PrintBestIndividual.cpp  PrintBestIndividual.hpp  SecondStage.cpp  SecondStage.hpp
src/Test/: BenchmarkGenerationTest.cpp  BenchmarkGenerationTest.hpp  CryoProtocolTest.cpp  CryoProtocolTest.hpp  InvididualEvaluationTest.cpp  InvididualEvaluationTest.hpp  NeighborhoodSelectionTest.cpp  NeighborhoodSelectionTest.hpp  PopulEvaluationTest.cpp  PopulEvaluationTest.hpp  SuperDebugTest.cpp  SuperDebugTest.hpp
src/helper_apps/: FileToPDBPrinter.cpp  FileToPDBPrinter.hpp
src/mpi_files/: MasterRosettaCalculator.hpp  UtilsMPI.hpp
